exports[`no-accessor-recursion > invalid(1): class A { get foo() { return this['foo']; } } 1`] = `

  1 | class A { get foo() { return this['foo']; } }

`;

exports[`no-accessor-recursion > invalid(1): class A { get foo() { return this['foo']; } } 2`] = `

Message:
> 1 | class A { get foo() { return this['foo']; } }
    |                              ^^^^^^^^^^^ Disallow recursive access to \`this\` within getters.

`;

exports[`no-accessor-recursion > invalid(1): const foo = {\n\tget bar() {\n\t\treturn this.bar;\n\t}\n}; 1`] = `

  1 | const foo = {
  2 | 	get bar() {
  3 | 		return this.bar;
  4 | 	}
  5 | };

`;

exports[`no-accessor-recursion > invalid(1): const foo = {\n\tget bar() {\n\t\treturn this.bar;\n\t}\n}; 2`] = `

Message:
  1 | const foo = {
  2 | 	get bar() {
> 3 | 		return this.bar;
    | 		       ^^^^^^^^ Disallow recursive access to \`this\` within getters.
  4 | 	}
  5 | };

`;

exports[`no-accessor-recursion > invalid(10): class Foo{\n\tget bar() {\n\t\treturn this.#bar;\n\t}\n\n\tget #bar() {\n\t\treturn this.#bar\n\t}\n} 1`] = `

  1 | class Foo{
  2 | 	get bar() {
  3 | 		return this.#bar;
  4 | 	}
  5 |
  6 | 	get #bar() {
  7 | 		return this.#bar
  8 | 	}
  9 | }

`;

exports[`no-accessor-recursion > invalid(10): class Foo{\n\tget bar() {\n\t\treturn this.#bar;\n\t}\n\n\tget #bar() {\n\t\treturn this.#bar\n\t}\n} 2`] = `

Message:
  1 | class Foo{
  2 | 	get bar() {
  3 | 		return this.#bar;
  4 | 	}
  5 |
  6 | 	get #bar() {
> 7 | 		return this.#bar
    | 		       ^^^^^^^^^ Disallow recursive access to \`this\` within getters.
  8 | 	}
  9 | }

`;

exports[`no-accessor-recursion > invalid(11): class Foo{\n\tstatic get bar() {\n\t\treturn this.bar;\n\t}\n} 1`] = `

  1 | class Foo{
  2 | 	static get bar() {
  3 | 		return this.bar;
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(11): class Foo{\n\tstatic get bar() {\n\t\treturn this.bar;\n\t}\n} 2`] = `

Message:
  1 | class Foo{
  2 | 	static get bar() {
> 3 | 		return this.bar;
    | 		       ^^^^^^^^ Disallow recursive access to \`this\` within getters.
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(12): class Foo{\n\tget bar() {\n\t\tconst {bar} = this;\n\t}\n\n\tget baz() {\n\t\tconst {baz: baz1} = this;\n\t}\n} 1`] = `

  1 | class Foo{
  2 | 	get bar() {
  3 | 		const {bar} = this;
  4 | 	}
  5 |
  6 | 	get baz() {
  7 | 		const {baz: baz1} = this;
  8 | 	}
  9 | }

`;

exports[`no-accessor-recursion > invalid(12): class Foo{\n\tget bar() {\n\t\tconst {bar} = this;\n\t}\n\n\tget baz() {\n\t\tconst {baz: baz1} = this;\n\t}\n} 2`] = `

Message:
  1 | class Foo{
  2 | 	get bar() {
> 3 | 		const {bar} = this;
    | 		      ^^^^^^^^^^^^ Disallow recursive access to \`this\` within getters.
  4 | 	}
  5 |
  6 | 	get baz() {
  7 | 		const {baz: baz1} = this;
  8 | 	}
  9 | }

`;

exports[`no-accessor-recursion > invalid(12): class Foo{\n\tget bar() {\n\t\tconst {bar} = this;\n\t}\n\n\tget baz() {\n\t\tconst {baz: baz1} = this;\n\t}\n} 3`] = `

Message:
  1 | class Foo{
  2 | 	get bar() {
  3 | 		const {bar} = this;
  4 | 	}
  5 |
  6 | 	get baz() {
> 7 | 		const {baz: baz1} = this;
    | 		      ^^^^^^^^^^^^^^^^^^ Disallow recursive access to \`this\` within getters.
  8 | 	}
  9 | }

`;

exports[`no-accessor-recursion > invalid(13): class Foo {\n\tset bar(v) {\n\t\t++ this.bar;\n\t}\n} 1`] = `

  1 | class Foo {
  2 | 	set bar(v) {
  3 | 		++ this.bar;
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(13): class Foo {\n\tset bar(v) {\n\t\t++ this.bar;\n\t}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	set bar(v) {
> 3 | 		++ this.bar;
    | 		   ^^^^^^^^ Disallow recursive access to \`this\` within setters.
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(14): class Foo {\n\tset bar(v) {\n\t\tthis.bar --;\n\t}\n} 1`] = `

  1 | class Foo {
  2 | 	set bar(v) {
  3 | 		this.bar --;
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(14): class Foo {\n\tset bar(v) {\n\t\tthis.bar --;\n\t}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	set bar(v) {
> 3 | 		this.bar --;
    | 		^^^^^^^^ Disallow recursive access to \`this\` within setters.
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(15): class Foo {\n\tset bar(v) {\n\t\t[this.bar] = array;\n\t}\n} 1`] = `

  1 | class Foo {
  2 | 	set bar(v) {
  3 | 		[this.bar] = array;
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(15): class Foo {\n\tset bar(v) {\n\t\t[this.bar] = array;\n\t}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	set bar(v) {
> 3 | 		[this.bar] = array;
    | 		 ^^^^^^^^ Disallow recursive access to \`this\` within setters.
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(16): class Foo {\n\tset bar(v) {\n\t\t[this.bar = defaultValue] = array;\n\t}\n} 1`] = `

  1 | class Foo {
  2 | 	set bar(v) {
  3 | 		[this.bar = defaultValue] = array;
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(16): class Foo {\n\tset bar(v) {\n\t\t[this.bar = defaultValue] = array;\n\t}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	set bar(v) {
> 3 | 		[this.bar = defaultValue] = array;
    | 		 ^^^^^^^^ Disallow recursive access to \`this\` within setters.
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(17): class Foo {\n\tset bar(v) {\n\t\t[...this.bar] = array;\n\t}\n} 1`] = `

  1 | class Foo {
  2 | 	set bar(v) {
  3 | 		[...this.bar] = array;
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(17): class Foo {\n\tset bar(v) {\n\t\t[...this.bar] = array;\n\t}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	set bar(v) {
> 3 | 		[...this.bar] = array;
    | 		    ^^^^^^^^ Disallow recursive access to \`this\` within setters.
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(18): class Foo {\n\tset bar(v) {\n\t\t({property: this.bar} = object);\n\t}\n} 1`] = `

  1 | class Foo {
  2 | 	set bar(v) {
  3 | 		({property: this.bar} = object);
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(18): class Foo {\n\tset bar(v) {\n\t\t({property: this.bar} = object);\n\t}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	set bar(v) {
> 3 | 		({property: this.bar} = object);
    | 		            ^^^^^^^^ Disallow recursive access to \`this\` within setters.
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(19): class Foo {\n\tset bar(v) {\n\t\t({property: this.bar = defaultValue} = object);\n\t}\n} 1`] = `

  1 | class Foo {
  2 | 	set bar(v) {
  3 | 		({property: this.bar = defaultValue} = object);
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(19): class Foo {\n\tset bar(v) {\n\t\t({property: this.bar = defaultValue} = object);\n\t}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	set bar(v) {
> 3 | 		({property: this.bar = defaultValue} = object);
    | 		            ^^^^^^^^ Disallow recursive access to \`this\` within setters.
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(2): class A { get foo() { return this[\"foo\"]; } } 1`] = `

  1 | class A { get foo() { return this["foo"]; } }

`;

exports[`no-accessor-recursion > invalid(2): class A { get foo() { return this[\"foo\"]; } } 2`] = `

Message:
> 1 | class A { get foo() { return this["foo"]; } }
    |                              ^^^^^^^^^^^ Disallow recursive access to \`this\` within getters.

`;

exports[`no-accessor-recursion > invalid(2): class Foo {\n\tget bar() {\n\t\treturn this.bar;\n\t}\n} 1`] = `

  1 | class Foo {
  2 | 	get bar() {
  3 | 		return this.bar;
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(2): class Foo {\n\tget bar() {\n\t\treturn this.bar;\n\t}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	get bar() {
> 3 | 		return this.bar;
    | 		       ^^^^^^^^ Disallow recursive access to \`this\` within getters.
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(20): class Foo {\n\tset bar(v) {\n\t\tfor (this.bar of array) {}\n\t}\n} 1`] = `

  1 | class Foo {
  2 | 	set bar(v) {
  3 | 		for (this.bar of array) {}
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(20): class Foo {\n\tset bar(v) {\n\t\tfor (this.bar of array) {}\n\t}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	set bar(v) {
> 3 | 		for (this.bar of array) {}
    | 		     ^^^^^^^^ Disallow recursive access to \`this\` within setters.
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(21): class Foo {\n\tset bar(v) {\n\t\tfor (this.bar in object) {}\n\t}\n} 1`] = `

  1 | class Foo {
  2 | 	set bar(v) {
  3 | 		for (this.bar in object) {}
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(21): class Foo {\n\tset bar(v) {\n\t\tfor (this.bar in object) {}\n\t}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	set bar(v) {
> 3 | 		for (this.bar in object) {}
    | 		     ^^^^^^^^ Disallow recursive access to \`this\` within setters.
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(3): class A { set foo(value) { this['foo'] = value; } } 1`] = `

  1 | class A { set foo(value) { this['foo'] = value; } }

`;

exports[`no-accessor-recursion > invalid(3): class A { set foo(value) { this['foo'] = value; } } 2`] = `

Message:
> 1 | class A { set foo(value) { this['foo'] = value; } }
    |                            ^^^^^^^^^^^ Disallow recursive access to \`this\` within setters.

`;

exports[`no-accessor-recursion > invalid(3): const foo = {\n\tset bar(value) {\n\t\tthis.bar = value;\n\t}\n}; 1`] = `

  1 | const foo = {
  2 | 	set bar(value) {
  3 | 		this.bar = value;
  4 | 	}
  5 | };

`;

exports[`no-accessor-recursion > invalid(3): const foo = {\n\tset bar(value) {\n\t\tthis.bar = value;\n\t}\n}; 2`] = `

Message:
  1 | const foo = {
  2 | 	set bar(value) {
> 3 | 		this.bar = value;
    | 		^^^^^^^^ Disallow recursive access to \`this\` within setters.
  4 | 	}
  5 | };

`;

exports[`no-accessor-recursion > invalid(4): class A { get foo() { const {'foo': foo} = this; return foo; } } 1`] = `

  1 | class A { get foo() { const {'foo': foo} = this; return foo; } }

`;

exports[`no-accessor-recursion > invalid(4): class A { get foo() { const {'foo': foo} = this; return foo; } } 2`] = `

Message:
> 1 | class A { get foo() { const {'foo': foo} = this; return foo; } }
    |                             ^^^^^^^^^^^^^^^^^^^ Disallow recursive access to \`this\` within getters.

`;

exports[`no-accessor-recursion > invalid(4): class Foo {\n\tset bar(value) {\n\t\tthis.bar = value;\n\t}\n} 1`] = `

  1 | class Foo {
  2 | 	set bar(value) {
  3 | 		this.bar = value;
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(4): class Foo {\n\tset bar(value) {\n\t\tthis.bar = value;\n\t}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	set bar(value) {
> 3 | 		this.bar = value;
    | 		^^^^^^^^ Disallow recursive access to \`this\` within setters.
  4 | 	}
  5 | }

`;

exports[`no-accessor-recursion > invalid(5): const foo = {\n\tget bar() {\n\t\treturn this.bar.baz;\n\t}\n}; 1`] = `

  1 | const foo = {
  2 | 	get bar() {
  3 | 		return this.bar.baz;
  4 | 	}
  5 | };

`;

exports[`no-accessor-recursion > invalid(5): const foo = {\n\tget bar() {\n\t\treturn this.bar.baz;\n\t}\n}; 2`] = `

Message:
  1 | const foo = {
  2 | 	get bar() {
> 3 | 		return this.bar.baz;
    | 		       ^^^^^^^^ Disallow recursive access to \`this\` within getters.
  4 | 	}
  5 | };

`;

exports[`no-accessor-recursion > invalid(6): const foo = {\n\tget bar() {\n\t\tif (true) {\n\t\t\treturn this.bar;\n\t\t}\n\t}\n}; 1`] = `

  1 | const foo = {
  2 | 	get bar() {
  3 | 		if (true) {
  4 | 			return this.bar;
  5 | 		}
  6 | 	}
  7 | };

`;

exports[`no-accessor-recursion > invalid(6): const foo = {\n\tget bar() {\n\t\tif (true) {\n\t\t\treturn this.bar;\n\t\t}\n\t}\n}; 2`] = `

Message:
  1 | const foo = {
  2 | 	get bar() {
  3 | 		if (true) {
> 4 | 			return this.bar;
    | 			       ^^^^^^^^ Disallow recursive access to \`this\` within getters.
  5 | 		}
  6 | 	}
  7 | };

`;

exports[`no-accessor-recursion > invalid(7): const foo = {\n\tget bar() {\n\t\tconst baz = () => {\n\t\t\treturn this.bar;\n\t\t}\n\t}\n}; 1`] = `

  1 | const foo = {
  2 | 	get bar() {
  3 | 		const baz = () => {
  4 | 			return this.bar;
  5 | 		}
  6 | 	}
  7 | };

`;

exports[`no-accessor-recursion > invalid(7): const foo = {\n\tget bar() {\n\t\tconst baz = () => {\n\t\t\treturn this.bar;\n\t\t}\n\t}\n}; 2`] = `

Message:
  1 | const foo = {
  2 | 	get bar() {
  3 | 		const baz = () => {
> 4 | 			return this.bar;
    | 			       ^^^^^^^^ Disallow recursive access to \`this\` within getters.
  5 | 		}
  6 | 	}
  7 | };

`;

exports[`no-accessor-recursion > invalid(8): const foo = {\n\tget bar() {\n\t\tconst baz = () => {\n\t\t\treturn () => {\n\t\t\t\treturn this.bar;\n\t\t\t}\n\t\t}\n\t}\n}; 1`] = `

  1 | const foo = {
  2 | 	get bar() {
  3 | 		const baz = () => {
  4 | 			return () => {
  5 | 				return this.bar;
  6 | 			}
  7 | 		}
  8 | 	}
  9 | };

`;

exports[`no-accessor-recursion > invalid(8): const foo = {\n\tget bar() {\n\t\tconst baz = () => {\n\t\t\treturn () => {\n\t\t\t\treturn this.bar;\n\t\t\t}\n\t\t}\n\t}\n}; 2`] = `

Message:
  1 | const foo = {
  2 | 	get bar() {
  3 | 		const baz = () => {
  4 | 			return () => {
> 5 | 				return this.bar;
    | 				       ^^^^^^^^ Disallow recursive access to \`this\` within getters.
  6 | 			}
  7 | 		}
  8 | 	}
  9 | };

`;

exports[`no-accessor-recursion > invalid(9): const foo = {\n\tget bar() {\n\t\ta = this.bar;\n\t}\n}; 1`] = `

  1 | const foo = {
  2 | 	get bar() {
  3 | 		a = this.bar;
  4 | 	}
  5 | };

`;

exports[`no-accessor-recursion > invalid(9): const foo = {\n\tget bar() {\n\t\ta = this.bar;\n\t}\n}; 2`] = `

Message:
  1 | const foo = {
  2 | 	get bar() {
> 3 | 		a = this.bar;
    | 		    ^^^^^^^^ Disallow recursive access to \`this\` within getters.
  4 | 	}
  5 | };

`;
